// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plumage-textarea-component renders default markup: default-markup 1`] = `
<plumage-textarea-component label="Comments">
  <div class="stencil-component">
    <div>
      <div class="form-group">
        <label class="form-control-label label-sm" for="plumage-ta-test" id="plumage-ta-test-label">
          <span>
            Comments
          </span>
        </label>
        <div>
          <div class="input-container" role="presentation">
            <div class="sr-only" id="plumage-ta-test-help">
              Enter Comments. This is a multiline text area.
            </div>
            <div aria-hidden="true" class="b-underline b-underline-top" role="presentation">
              <div aria-hidden="true" class="b-focus b-focus-top" role="presentation" style="width: 0; left: 50%;"></div>
            </div><textarea aria-describedby="plumage-ta-test-help" aria-invalid="false" aria-labelledby="plumage-ta-test-label" autocomplete="off" class="textarea-control" id="plumage-ta-test" name="plumage-ta-test" placeholder="Comments" rows="3" spellcheck="" value=""></textarea>
            <div aria-hidden="true" class="b-underline b-underline-bottom" role="presentation">
              <div aria-hidden="true" class="b-focus b-focus-bottom" role="presentation" style="width: 0; left: 50%;"></div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</plumage-textarea-component>
`;

exports[`plumage-textarea-component renders horizontal layout snapshot: horizontal-layout 1`] = `
<plumage-textarea-component form-layout="horizontal" input-col="9" label="Address" label-col="3" value="123 Main St">
  <div class="stencil-component">
    <div class="horizontal">
      <div class="form-group row">
        <label class="col-3 col-form-label form-control-label label-sm no-padding" for="plumage-ta-test" id="plumage-ta-test-label">
          <span>
            Address:
          </span>
        </label>
        <div class="col-9">
          <div class="input-container" role="presentation">
            <div class="sr-only" id="plumage-ta-test-help">
              Enter Address. This is a multiline text area.
            </div>
            <div aria-hidden="true" class="b-underline b-underline-top" role="presentation">
              <div aria-hidden="true" class="b-focus b-focus-top" role="presentation" style="width: 0; left: 50%;"></div>
            </div><textarea aria-describedby="plumage-ta-test-help" aria-invalid="false" aria-labelledby="plumage-ta-test-label" autocomplete="off" class="textarea-control" id="plumage-ta-test" name="plumage-ta-test" placeholder="Address" rows="3" spellcheck="" value="123 Main St"></textarea>
            <div aria-hidden="true" class="b-underline b-underline-bottom" role="presentation">
              <div aria-hidden="true" class="b-focus b-focus-bottom" role="presentation" style="width: 0; left: 50%;"></div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</plumage-textarea-component>
`;

exports[`plumage-textarea-component renders validation + counter snapshot: validation-and-counter 1`] = `
<plumage-textarea-component label="Description" max-length="20" required="" rows="4" validation="" validation-message="Please enter a description." value="Hello">
  <div class="stencil-component">
    <div>
      <div class="form-group">
        <label class="form-control-label invalid label-sm" for="plumage-ta-test" id="plumage-ta-test-label">
          <span>
            Description
          </span>
          <span class="required">
            *
          </span>
        </label>
        <div>
          <div class="input-container" role="presentation">
            <div class="sr-only" id="plumage-ta-test-help">
              Enter Description. This is a multiline text area.
            </div>
            <div aria-hidden="true" class="b-underline b-underline-top invalid" role="presentation">
              <div aria-hidden="true" class="b-focus b-focus-top invalid" role="presentation" style="width: 0; left: 50%;"></div>
            </div><textarea aria-describedby="plumage-ta-test-help plumage-ta-test-validation plumage-ta-test-counter" aria-invalid="true" aria-labelledby="plumage-ta-test-label" aria-required="true" autocomplete="off" class="is-invalid textarea-control" id="plumage-ta-test" maxlength="20" name="plumage-ta-test" placeholder="Description" required="" rows="4" spellcheck="" value="Hello"></textarea>
            <div aria-hidden="true" class="b-underline b-underline-bottom invalid" role="presentation">
              <div aria-hidden="true" class="b-focus b-focus-bottom invalid" role="presentation" style="width: 0; left: 50%;"></div>
            </div>
            <div aria-atomic="true" aria-live="polite" class="form-text textarea-counter" id="plumage-ta-test-counter">
              5 / 20
            </div>
            <div aria-live="polite" class="form-text invalid-feedback" id="plumage-ta-test-validation">
              Please enter a description.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</plumage-textarea-component>
`;

exports[`plumage-textarea-component updates internal value state when value prop changes: value-state-first 1`] = `
<plumage-textarea-component label="Notes" value="first">
  <div class="stencil-component">
    <div>
      <div class="form-group">
        <label class="form-control-label label-sm" for="plumage-ta-test" id="plumage-ta-test-label">
          <span>
            Notes
          </span>
        </label>
        <div>
          <div class="input-container" role="presentation">
            <div class="sr-only" id="plumage-ta-test-help">
              Enter Notes. This is a multiline text area.
            </div>
            <div aria-hidden="true" class="b-underline b-underline-top" role="presentation">
              <div aria-hidden="true" class="b-focus b-focus-top" role="presentation" style="width: 0; left: 50%;"></div>
            </div><textarea aria-describedby="plumage-ta-test-help" aria-invalid="false" aria-labelledby="plumage-ta-test-label" autocomplete="off" class="textarea-control" id="plumage-ta-test" name="plumage-ta-test" placeholder="Notes" rows="3" spellcheck="" value=""></textarea>
            <div aria-hidden="true" class="b-underline b-underline-bottom" role="presentation">
              <div aria-hidden="true" class="b-focus b-focus-bottom" role="presentation" style="width: 0; left: 50%;"></div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</plumage-textarea-component>
`;

exports[`plumage-textarea-component updates internal value state when value prop changes: value-state-second 1`] = `
<plumage-textarea-component label="Notes" value="second">
  <div class="stencil-component">
    <div>
      <div class="form-group">
        <label class="form-control-label label-sm" for="plumage-ta-test" id="plumage-ta-test-label">
          <span>
            Notes
          </span>
        </label>
        <div>
          <div class="input-container" role="presentation">
            <div class="sr-only" id="plumage-ta-test-help">
              Enter Notes. This is a multiline text area.
            </div>
            <div aria-hidden="true" class="b-underline b-underline-top" role="presentation">
              <div aria-hidden="true" class="b-focus b-focus-top" role="presentation" style="width: 0; left: 50%;"></div>
            </div><textarea aria-describedby="plumage-ta-test-help" aria-invalid="false" aria-labelledby="plumage-ta-test-label" autocomplete="off" class="textarea-control" id="plumage-ta-test" name="plumage-ta-test" placeholder="Notes" rows="3" spellcheck="" value=""></textarea>
            <div aria-hidden="true" class="b-underline b-underline-bottom" role="presentation">
              <div aria-hidden="true" class="b-focus b-focus-bottom" role="presentation" style="width: 0; left: 50%;"></div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</plumage-textarea-component>
`;
